--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
   --primary-color: #22254b;
@@ -11,23 +11,15 @@
 
 body {
   background-color: var(--primary-color);
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
 }
 
 header {
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-end;
   background-color: var(--secondary-color);
-}
-
-header h1 {
-  color: #eee;
-  padding: 0;
-  margin: 0;
-  font-size: 1.5rem;
 }
 
 .search {
@@ -74,6 +66,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap:0.2rem;
   padding: 0.5rem 1rem 1rem;
   letter-spacing: 0.5px;
 }
@@ -116,19 +109,4 @@ main {
 
 .movie:hover .overview {
   transform: translateY(0);
-}
-
-.footer p {
-  color: #eee;
-  text-align: center;
-}
-
-@media (max-width: 580px) {
-  header {
-    flex-direction: column;
-  }
-
-  header h1 {
-    padding: 0.5rem 1rem;
-  }
 }
